@@ -1,3 +1,9 @@
+2004-06-30  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Added support for forcing a user selected user-agent
+	string - useful for dealing with facist proxy admins. The default
+	is now more Mozilla-like.
+
 2004-06-29  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkchat.tcl (::tkchat::parseStr): add recognition of any 6 or
